# yes-i-hate-it

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Pipfile  pyproject.toml  setup.cfg  setup.py
.github/workflows/: deploy.yaml  main.yaml  test.yaml
data/: 1_1_100_5_20_k.json  1_5_300_10_20_k.json  3_1_100_50_100_k.json  dataset.npz  model1.h5  tweets.sqlite
docker/: Dockerfile  discord_Dockerfile  discord_docker-compose.yaml  docker-compose.yaml
src/: exceptions.py  main.py
src/yes_i_hate_it/: PCA.py  bot.py  cluster_data.py  config.py  gather_tweets.py  generate_bow.py  generate_cluster.py  generate_dataset.py  main.py  neural_net.ipynb  neural_net.py  process_dataset.py  process_tweets.py  test.py
src/yes_i_hate_it/.ipynb_checkpoints/: neural_net-checkpoint.ipynb
tests/: conftest.py  main_test.py
