[metadata]
name = yes_i_hate_it
description = Twitter bot to automatically respond to football tweets with random vehicle data
author = David Lopez
license = MIT
license_files = LICENSE
platforms = linux, win32
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    yes_i_hate_it
package_dir =
    =src
zip_safe = no

[options.package_data]
yes_i_hate_it = py.typed
